# logflash

./: .gitignore  README.md  howToBuild.md  pyproject.toml
.github/workflows/: ci.yml
docs/: rules.md
scripts/: install_logflash.py
src/logflash/: cli.py  engine.py  rules.py
src/logflash/parsers/: __init__.py  js_parser.py  python_parser.py
src/logflash/rules/: default_rules.json
tests/: test_rule_loading.py
vuln_demo/: vuln.py
