[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logflash"
version = "0.1.0"
description = "A Modular SAST Engine for rapid local security auditing."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# runtime dependencies
dependencies = ["PyYAML>=6.0", "pytest>=7.0"]

# optional dependencies for testing (used by CI)
[project.optional-dependencies]
test = ["pytest>=7.0", "PyYAML>=6.0"]

[project.scripts]
logflash = "logflash.cli:main"

[tool.setuptools]
package-data = {"logflash" = ["rules/*.json", "rules/*.yaml"]}
include-package-data = true
